--- a/AutomatAis3Full/Form/Automat/Registration/Journal/ReceivedDocument/ReceivedDocuments/ReceivedDocuments.xaml
+++ b/AutomatAis3Full/Form/Automat/Registration/Journal/ReceivedDocument/ReceivedDocuments/ReceivedDocuments.xaml
@@ -1,12 +1,12 @@
 ﻿<UserControl
-    x:Class="AutomatAis3Full.Form.Automat.Registration.UtochneneeSved.UserControl.YtochnenieSved"
+    x:Class="AutomatAis3Full.Form.Automat.Registration.Journal.ReceivedDocument.ReceivedDocuments.ReceivedDocuments"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.Registration.UtochneneeSved.DataContext"
-    xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.Registration.UtochneneeSved.UserControl"
+    xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.Registration.Journal.ReceivedDocument.DataContext"
+    xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.Registration.Journal.ReceivedDocument.ReceivedDocuments"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DataContext="{d:DesignInstance {x:Type datacontext:DataContextReg}}"
+    d:DataContext="{d:DesignInstance {x:Type datacontext:DataContextReceivedDocuments}}"
     d:DesignHeight="300"
     d:DesignWidth="300"
     mc:Ignorable="d">
@@ -18,7 +18,10 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="0">
+        <StackPanel
+            Grid.Row="0"
+            Grid.Column="0"
+            Margin="0,0,10,0">
             <ContentControl
                 Margin="5,5,5,5"
                 HorizontalAlignment="Left"
@@ -27,13 +30,5 @@
             <Label Content="Комманда приостановить Shift+S" />
             <Label Content="Комманда возобновить Shift+A" />
         </StackPanel>
-        <CheckBox
-            Grid.Row="0"
-            Grid.Column="1"
-            Margin="5,5,5,5"
-            VerticalAlignment="Top"
-            Content="Учитывать установку фильтра!!!"
-            FontWeight="Bold"
-            IsChecked="{Binding StartButton.IsChekcs}" />
     </Grid>
 </UserControl>
