--- a/AutomatAis3Full/Form/Automat/Uregulirovanie/SignatureHeadProperty/UserControl/SignatureHeadProperty.xaml
+++ b/AutomatAis3Full/Form/Automat/Uregulirovanie/SignatureHeadProperty/UserControl/SignatureHeadProperty.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="AutomatAis3Full.Form.Automat.Uregulirovanie.FormTrebUplNaloga.UserControl.FormTrebUplNaloga"
+﻿<UserControl x:Class="AutomatAis3Full.Form.Automat.Uregulirovanie.SignatureHeadProperty.UserControl.SignatureHeadProperty"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.FormTrebUplNaloga.DataContext"
-             xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.FormTrebUplNaloga.UserControl"
+             xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.SignatureHeadProperty.DataContext"
+             xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.SignatureHeadProperty.UserControl"
+             xmlns:DataContext="{d:DesignInstance {x:Type datacontext:DataContextSignatureHeadProperty}}"
              mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance {x:Type datacontext:DataContextFormTrebUplNaloga}}"
-             d:DesignHeight="300" d:DesignWidth="900">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
@@ -17,9 +17,8 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" FontSize="20" Grid.ColumnSpan="2"  HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"   Background="Beige"  Foreground="DarkCyan" >Автомат на ветку - 05.08.03.0X.03. Утверждение требований об уплате</Label>
+        <Label Grid.Row="0" Grid.Column="0" FontSize="20" Grid.ColumnSpan="2"  HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"   Background="Beige"  Foreground="DarkCyan" >Автомат на ветку - 05.08.09.02.03.06. Подпись руководителями Заявлений о взыскании за счет имущества ФЛ</Label>
         <StackPanel Grid.Row="1" Grid.Column="0">
-            
             <ContentControl
                 Margin="5,5,5,5"
                 HorizontalAlignment="Left"
