--- a/AutomatAis3Full/Form/Automat/Uregulirovanie/Uvedomlenie0509/MessageLk/UserControl/MessageLk.xaml
+++ b/AutomatAis3Full/Form/Automat/Uregulirovanie/Uvedomlenie0509/MessageLk/UserControl/MessageLk.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="AutomatAis3Full.Form.Automat.Uregulirovanie.MessageLk.UserControl.MessageLk"
+    x:Class="AutomatAis3Full.Form.Automat.Uregulirovanie.Uvedomlenie0509.MessageLk.UserControl.MessageLk"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.MessageLk.DataContext"
-    xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.MessageLk.UserControl"
+    xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.Uvedomlenie0509.MessageLk.DataContext"
+    xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.Uvedomlenie0509.MessageLk.UserControl"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DataContext="{d:DesignInstance {x:Type datacontext:DataContextMessageLk}}"
     d:DesignHeight="300"
@@ -12,13 +12,16 @@
     mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="0">
+        <Label Grid.Row="0" Grid.Column="0" FontSize="20" Grid.ColumnSpan="2"  HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"   Background="Beige"  Foreground="DarkCyan" >Автомат на ветку - 05.09 Сообщения о принятом решении о зачете (возврате) подлежащие выгрузке в ЛК</Label>
+        <StackPanel Grid.Row="1" Grid.Column="0">
+            
             <ContentControl
                 Margin="5,5,5,5"
                 HorizontalAlignment="Left"
