--- a/AutomatAis3Full/Form/Automat/Uregulirovanie/Ticket05080902/Ticket0508090203/Ticket050809020306/UserControl/SignatureHeadProperty.xaml
+++ b/AutomatAis3Full/Form/Automat/Uregulirovanie/Ticket05080902/Ticket0508090203/Ticket050809020306/UserControl/SignatureHeadProperty.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="AutomatAis3Full.Form.Automat.Uregulirovanie.SignatureHeadProperty.UserControl.SignatureHeadProperty"
+﻿<UserControl x:Class="AutomatAis3Full.Form.Automat.Uregulirovanie.Ticket05080902.Ticket0508090203.Ticket050809020306.UserControl.SignatureHeadProperty"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.SignatureHeadProperty.DataContext"
-             xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.SignatureHeadProperty.UserControl"
+             xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.Ticket05080902.Ticket0508090203.Ticket050809020306.DataContext"
+             xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.Ticket05080902.Ticket0508090203.Ticket050809020306.UserControl"
              xmlns:DataContext="{d:DesignInstance {x:Type datacontext:DataContextSignatureHeadProperty}}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
