--- a/AutomatAis3Full/Form/Automat/Uregulirovanie/Uvedomlenie0509/MessageLk/UserControl/MessageLk.xaml
+++ b/AutomatAis3Full/Form/Automat/Uregulirovanie/Uvedomlenie0509/MessageLk/UserControl/MessageLk.xaml
@@ -3,10 +3,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.Uvedomlenie0509.MessageLk.DataContext"
+    xmlns:dataContext="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.Uvedomlenie0509.MessageLk.DataContext"
     xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.Uregulirovanie.Uvedomlenie0509.MessageLk.UserControl"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DataContext="{d:DesignInstance {x:Type datacontext:DataContextMessageLk}}"
+    d:DataContext="{d:DesignInstance {x:Type dataContext:DataContextMessageLk}}"
     d:DesignHeight="300"
     d:DesignWidth="300"
     mc:Ignorable="d">
@@ -27,8 +27,8 @@
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Content="{Binding StartButton.Button}" />
-            <Label Content="Комманда приостановить Shift+S" />
-            <Label Content="Комманда возобновить Shift+A" />
+            <Label Content="Команда приостановить Shift+S" />
+            <Label Content="Команда возобновить Shift+A" />
         </StackPanel>
     </Grid>
 </UserControl>
