Создан новый сервис под Автоматы для статистики

--- a/AutomatAis3Full/Form/Automat/Okp2/TaxJournal/TaxJournal/FormTaxJournal.xaml
+++ b/AutomatAis3Full/Form/Automat/Okp2/TaxJournal/TaxJournal/FormTaxJournal.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:datacontext="clr-namespace:AutomatAis3Full.Form.Automat.Okp2.TaxJournal.DataContext"
              xmlns:local="clr-namespace:AutomatAis3Full.Form.Automat.Okp2.TaxJournal.TaxJournal"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance {x:Type datacontext:DataContextTaxJournal}}"
              d:DesignHeight="450" d:DesignWidth="800">
@@ -17,17 +18,100 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Grid.Column="0">
+            <ToolBar Height="100" Margin="0,0,0,10">
+                <StackPanel Height="100">
+                    <WrapPanel Margin="0,0,0,10">
+                        <Button Width="40" Height="40" Command="{Binding DownloadDb}" Cursor="Hand" ToolTip="Выгрузить документы из БД"
+                                IsEnabled="{Binding DownloadPrintDb.IsLoadFileDb, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}">
+                            <Button.Template>
+                                <ControlTemplate>
+                                    <materialDesign:PackIcon
+                                        Background="Green"
+                                        BorderBrush="Black"
+                            Width="40"
+                            Height="40"
+                            Kind="LoginVariant" />
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+                        <Label Name="Db" HorizontalAlignment="Center" Width="Auto" VerticalAlignment="Center" FontSize="16" FontStyle="Normal" Content="Количество файлов в Базе данных:"/>
+                        <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontStyle="Normal" Content="{Binding DownloadPrintDb.CountFileAll, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                               ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}"
+                               Validation.ErrorTemplate="{StaticResource ValidationFailederror}"
+                               />
+                        <Grid Height="40" Width="400">
+                            <ProgressBar
+                    Width="400"
+                    Height="30"
+                    Margin="10,0,0,0"
+                    Maximum="{Binding DownloadPrintDb.ProgressDownloadMaximum, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}"
+                    Value="{Binding DownloadPrintDb.ProgressDownload, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}" />
+                            <Label
+                    Height="30"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Content="{Binding DownloadPrintDb.DownloadFile, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}" />
+                        </Grid>
+                    </WrapPanel>
+                    <WrapPanel >
+                        <Button Width="40" Height="40" ToolTip="Распечатать документы" IsEnabled="{Binding DownloadPrintDb.IsPrintFile, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}" Command="{Binding PrintFile}" Cursor="Hand" >
+                            <Button.Template>
+                                <ControlTemplate>
+                                    <materialDesign:PackIcon
+                                        Background="Green"
+                                        BorderBrush="Black"
+                            Width="40"
+                            Height="40"
+                            Kind="Printer" />
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+                        <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontStyle="Normal" Content="Количество файлов на печать:"  Width="{Binding ElementName=Db, Path=ActualWidth }" />
+                        <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontStyle="Normal" Content="{Binding DownloadPrintDb.CountFileAll, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" 
+                               ToolTip="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}"
+                               Validation.ErrorTemplate="{StaticResource ValidationFailederror}"
+                               />
+                        <Grid Height="40" Width="400">
+                            <ProgressBar
+                    Width="400"
+                    Height="30"
+                    Margin="10,0,0,0"
+                    Maximum="{Binding DownloadPrintDb.ProgressPrintMaximum, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}"
+                    Value="{Binding DownloadPrintDb.ProgressPrint, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}" />
+                            <Label
+                    Height="30"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Content="{Binding DownloadPrintDb.StatusPrint, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}" />
+                        </Grid>
+                    </WrapPanel>
+                </StackPanel>
+            </ToolBar>
             <ContentControl
                 Margin="5,5,5,5"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Content="{Binding StartButton.Button}" />
             <WrapPanel>
-                <Label Content="Количество дней на извещение"/>
-                <TextBox PreviewTextInput="NumberValidationTextBox" Text="{Binding CountDay}" MaxLength="2" ></TextBox>
+                <Label FontSize="16" FontStyle="Normal"  Content="Количество дней на извещение:"/>
+                <TextBox FontSize="16" FontStyle="Normal" PreviewTextInput="NumberValidationTextBox" Text="{Binding DatePicker.CountDay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MaxLength="2" ></TextBox>
+                <Label FontSize="16" FontStyle="Normal"  Content="Дата вызова плательщика:"/>
+                <DatePicker
+                      FontSize="16" FontStyle="Normal" 
+                      IsEnabled="False"
+                      SelectedDate="{Binding DatePicker.Date, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                      Text="{Binding StringFormat='dd MMM yyyy', RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" />
             </WrapPanel>
-            <Label Content="Команда приостановить Shift+S" />
-            <Label Content="Команда возобновить Shift+A" />
+            <WrapPanel>
+                <Label FontSize="16" FontStyle="Normal"  Content="Дата выставления решения:"/>
+                <DatePicker
+                      FontSize="16" FontStyle="Normal" 
+                      SelectedDate="{Binding DatePicker.DateResh, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                      Text="{Binding StringFormat='dd MMM yyyy', RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" />
+            </WrapPanel>
+
+            <Label FontSize="16" FontStyle="Normal"  Content="Команда приостановить Shift+S" />
+            <Label FontSize="16" FontStyle="Normal"  Content="Команда возобновить Shift+A" />
         </StackPanel>
     </Grid>
 </UserControl>
