--- a/SetupAutomatAis3Full/DialogForm/WixUI_InstallAutomatAis3.wxs
+++ b/SetupAutomatAis3Full/DialogForm/WixUI_InstallAutomatAis3.wxs
@@ -49,6 +49,10 @@
         <Control Id="Service51" Type="Edit" X="110" Y="75" Width="110" Height="15" Property="SERVICE" Text="[SERVICE]"  ToolTip="Наименование сервера:" >
           <Property Id="SERVICE" Value="I7751-W40204180" />
         </Control>
+        <Control Id="ServiceSvedSave" Type="Text" X="10" Y="95" Width="105" Height="15" Transparent="yes" NoPrefix="yes" Text="Папка для БВ смотреть:"></Control>
+        <Control Id="BankSvedSave" Type="Edit" X="110" Y="95" Width="110" Height="15" Property="BANKSVEDSAVE" Text="[BANKSVEDSAVE]"  ToolTip="Папка для БВ смотреть:" >
+          <Property Id="BANKSVEDSAVE" Value="D:\" />
+        </Control>
         <Control Id="Next" Type="PushButton" X="236" Y="243" Width="56" Height="17" Default="yes" Text="!(loc.WixUINext)">
           <Publish Event="NewDialog" Value="VerifyReadyDlg" Order="10" />
         </Control>
